# ibm_5150

./: .gitignore  Cargo.toml  README.md  github  github.pub  prueba.json  test_out.txt
logs/: clock.txt  dissasembled.txt  log.txt  logs.txt
roms/001690_wing_commander/: disk01.img  disk02 - copia.img  disk03.img
roms/dos/: DISK01.IMD
roms/dos/3.00/: Disk01.img  Disk02.img
roms/dos/7.0/: Disk01.img  Disk02.xdf  Disk03.xdf  Disk04.xdf  Disk05.xdf
roms/dos/FreeDOS/: FreeDOS 1.3 Disk 2.img
roms/otros/: 101-MONOCHROME-MAZES.img  FLIGHTSIM-1984.img  FS.img
roms/personal_editor/: Disk1.img
roms/tests/: bitwise.asm  cmpneg.asm  control.asm  datatrnf.asm  interrupt.asm  jmpmov.asm  jump1.asm  jump2.asm  rep.asm  segpr.asm  strings.asm
roms/tests/8088/: CHANGELOG.md  README.md
roms/tests/8088/v1/: 8088.json
src/: __lib.rs  debugger.rs  frontend.rs  ggez_screen.rs  lib.rs  main.rs  screen.rs
src/frontend/: app_state.rs  egui_renderer.rs  mod.rs  toggle_switch.rs
src/hardware/: bus.rs  cpu.rs  cpu_utils.rs  debug.rs  dma_8237.rs  ibm_mda.rs  instr_utils.rs  mod.rs  peripheral.rs  pic_8259.rs  ppi_8255.rs  regs.rs  switches_cfg.rs  sys.rs  timer_8253.rs
src/hardware/casette/: mod.rs
src/hardware/cpu_8088/: cpu_utils.rs  decode.rs  dissasemble.rs  execute.rs  instr_utils.rs  int_handler.rs  mod.rs  regs.rs
src/hardware/display/: cga.rs  crtc6845.rs  font.rs  ibm_mda.rs  mod.rs
src/hardware/peripheral/: dma_8237.rs  fdc_necupd765.rs  mod.rs  pic_8259.rs  pit_8253.rs  ppi_8255.rs  timer_8253.rs
src/hardware/peripheral/display/: cga.rs  crtc6845.rs  (+3 more)
src/util/: debug.rs  debug_bios.rs  mod.rs
src/util/disassembly/: decode.rs  mod.rs
tests/: lib.rs  mod.rs  mul.rs
(+5 files in other folders)
