[package]
name = "ibm_5150"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mint = "0.5.9"
rand = "0.8.5"
lazy_static = "1.4.0"
rayon = "1.7.0"
eframe = "0.21.3"
egui = "0.21.0"
log = "0.4.17"
env_logger = "0.10.0"
regex = "1.7.3"
egui_extras = "0.21.0"
notan = "0.9.5"

[features]
tests = []
