[package]
name = "ibm_5150"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lazy_static = "1.5.0"
rayon = "1.10.0"
eframe = "0.29.1"
egui = "0.29.1"
regex = "1.7.3"
egui_extras = "0.29.1"
flate2 = "1.0.34"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.128"
assert_hex = "0.4.1"
ntest = "0.9.0"
winit = "0.30.5"
softbuffer = "0.4.6"
log = "0.4.22"
env_logger = "0.11.5"
rfd = "0.15.0"
# simple_logger = "5.0.0"

[features]
tests = []

[profile.release]
debug = true
